@@ -330,6 +330,18 @@ init|=
 literal|null
 decl_stmt|;
 specifier|private
+name|String
+name|type
+init|=
+literal|null
+decl_stmt|;
+specifier|private
+name|String
+name|classifier
+init|=
+literal|null
+decl_stmt|;
+specifier|private
 name|boolean
 name|optional
 init|=
@@ -429,6 +441,54 @@ operator|.
 name|scope
 operator|=
 name|scope
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getType
+parameter_list|()
+block|{
+return|return
+name|type
+return|;
+block|}
+specifier|public
+name|void
+name|setType
+parameter_list|(
+name|String
+name|type
+parameter_list|)
+block|{
+name|this
+operator|.
+name|type
+operator|=
+name|type
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getClassifier
+parameter_list|()
+block|{
+return|return
+name|classifier
+return|;
+block|}
+specifier|public
+name|void
+name|setClassifier
+parameter_list|(
+name|String
+name|classifier
+parameter_list|)
+block|{
+name|this
+operator|.
+name|classifier
+operator|=
+name|classifier
 expr_stmt|;
 block|}
 specifier|public
@@ -1222,6 +1282,16 @@ argument_list|,
 name|dependency
 operator|.
 name|getScope
+argument_list|()
+argument_list|,
+name|dependency
+operator|.
+name|getType
+argument_list|()
+argument_list|,
+name|dependency
+operator|.
+name|getClassifier
 argument_list|()
 argument_list|,
 name|dependency
