@@ -1512,6 +1512,74 @@ if|if
 condition|(
 name|dep
 operator|.
+name|getType
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|indent
+argument_list|(
+name|out
+argument_list|,
+name|indent
+operator|*
+literal|3
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<type>"
+operator|+
+name|dep
+operator|.
+name|getType
+argument_list|()
+operator|+
+literal|"</type>"
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|dep
+operator|.
+name|getClassifier
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|indent
+argument_list|(
+name|out
+argument_list|,
+name|indent
+operator|*
+literal|3
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<classifier>"
+operator|+
+name|dep
+operator|.
+name|getClassifier
+argument_list|()
+operator|+
+literal|"</classifier>"
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|dep
+operator|.
 name|getScope
 argument_list|()
 operator|!=
