@@ -516,6 +516,14 @@ name|String
 name|scope
 decl_stmt|;
 specifier|private
+name|String
+name|type
+decl_stmt|;
+specifier|private
+name|String
+name|classifier
+decl_stmt|;
+specifier|private
 name|boolean
 name|optional
 decl_stmt|;
@@ -533,6 +541,12 @@ name|version
 parameter_list|,
 name|String
 name|scope
+parameter_list|,
+name|String
+name|type
+parameter_list|,
+name|String
+name|classifier
 parameter_list|,
 name|boolean
 name|optional
@@ -561,6 +575,18 @@ operator|.
 name|scope
 operator|=
 name|scope
+expr_stmt|;
+name|this
+operator|.
+name|type
+operator|=
+name|type
+expr_stmt|;
+name|this
+operator|.
+name|classifier
+operator|=
+name|classifier
 expr_stmt|;
 name|this
 operator|.
@@ -603,6 +629,24 @@ parameter_list|()
 block|{
 return|return
 name|scope
+return|;
+block|}
+specifier|public
+name|String
+name|getType
+parameter_list|()
+block|{
+return|return
+name|type
+return|;
+block|}
+specifier|public
+name|String
+name|getClassifier
+parameter_list|()
+block|{
+return|return
+name|classifier
 return|;
 block|}
 specifier|public
